--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ description: >
   providing documentation and blog post pages.
 
 baseurl: "/jekyll-doc-theme" # the subpath of your site, e.g. /blog/
-url: https://arte-peru.github.io/jekyll-doc-theme # the base hostname & protocol for your site
-git_address: https://github.com/arte-peru/jekyll-doc-theme
-git_edit_address: https://github.com/arte-peru/jekyll-doc-theme/blob/gh-pages
+url: https://rhiap.github.io # the base hostname & protocol for your site
+git_address: https://github.com/rhiap/rhiap.github.io
+git_edit_address: https://github.com/rhiap/rhiap.github.io/blob/gh-pages
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
