--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -1,4 +1,2 @@
-- title: Períodos históricos
-  docs:
-  - themes
-  - customization
+docs:
+  - Ciudad y Territorio en los Andes: contribuciones a la historia del urbanismo prehispánico
