--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -1,2 +1,2 @@
 docs:
-  - Ciudad y Territorio en los Andes: contribuciones a la historia del urbanismo prehispánico
+  - "Ciudad y Territorio en los Andes: contribuciones a la historia del urbanismo prehispánico"
